# zefir-analytics

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
tests/: utils.py
tests/integration/: __init__.py  conftest.py  test_aggregated_consumer_parameters_over_years.py  test_brutto_netto_opex.py  test_engine_from_config.py  test_lbs_parameters_over_years.py  test_line_parameters_over_years.py  test_source_parameters_over_years.py  utils.py
tests/integration/n_sample/: test_n_samples_aggregate_consumer_parameters_over_years.py  test_n_samples_lbs_parameters_over_years.py  test_n_samples_line_parameters_over_years.py  test_n_samples_source_parameters_over_years.py
tests/resources/simple-data-case/results/: Objective_func_value.csv
tests/resources/simple-data-case/source_csv/structure/: Buses.csv  (+3 more)
tests/resources/simple-nsample-case/parameters/: hour_sample.csv
tests/unit/: test_data_loader.py  test_version.py  test_zefir_engine.py
tests/unit/aggragated_consumer_parameters/: conftest.py  test_aggregated_consumers_get_fraction.py  test_aggregated_consumers_get_n_consumers.py  test_aggregated_consumers_parameters_query_utils_and_property.py  test_aggregated_consumers_yearly_energy_usage.py
tests/unit/lbs_parameters/: conftest.py  test_lbs_parameters_get_capacity.py  test_lbs_parameters_get_fraction.py  test_lbs_parameters_query_utils_and_property.py
tests/unit/line_parameters/: conftest.py  test_line_parameters_query_get_flow.py  test_line_parameters_query_get_transmission_fee.py  test_line_parameters_query_utils_and_property.py
tests/unit/source_parameters/: conftest.py  test_source_parameters_format_and_utils.py  test_source_parameters_query_emission_fee_cost.py  test_source_parameters_query_fuel_cost.py  test_source_parameters_query_fuel_usage.py  test_source_parameters_query_generation_demand.py  test_source_parameters_query_generation_sum.py  test_source_parameters_query_get_dump_energy_sum.py  test_source_parameters_query_get_emission.py  test_source_parameters_query_get_ens.py  test_source_parameters_query_get_load_sum.py  test_source_parameters_query_installed_capacity.py  test_source_parameters_query_network_attrs.py  test_source_parameters_query_state_of_charge.py  test_sources_parameters_query_capex_opex.py
tests/unit/utils.py/: __init__.py  test_utils.py
zefir_analytics/: __init__.py  license_header.txt  zefir_engine.py
zefir_analytics/_engine/: __init__.py  constants.py  data_loader.py
zefir_analytics/_engine/data_queries/: aggregated_consumer_parameters_over_years.py  lbs_parameters_over_years.py  line_parameters_over_years.py  source_parameters_over_years.py  utils.py
(+1232 files in other folders)
