[build-system]
requires = ["setuptools == 69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "zefir-analytics"
dynamic = ["version"]
authors = [
    {name = "Narodowe Centrum Badań Jądrowych", email = "office@idea.edu.pl"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy~=1.24.2",
    "pandas==2.0.1",
    "pyzefir"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest==7.4.4",
    "flake8",
    "black==24.2.0",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.11.1",
    "pytest-lazy-fixture~=0.6.3",
    "pylama[mccabe,pycodestyle,pyflakes,radon,mypy,toml]",
    "tox",
]

[tool.setuptools.dynamic]
version = {attr = "zefir_analytics.__version__"}

[tool.setuptools.packages.find]
include = ["zefir_analytics*"]
exclude = ["docs*", "tests*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bumpversion]
current_version = "0.4.13"
commit = true
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [
    "{major}.{minor}.{patch}",
]

[[tool.bumpversion.files]]
filename = "zefir_analytics/__init__.py"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

[tool.mypy-tests]
disallow_untyped_decorators = false

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py311
    isolated_build = True

    [testenv]
    usedevelop = True
    deps = .[dev]

    [testenv:unit]
    commands =
            python -m pytest -vvv tests/unit

    [testenv:fast_integration]
    commands =
            python -m pytest -vvv -m "not long_test" --cov-report term --cov-report xml:coverage.xml \
            --cov=zefir_analytics --junitxml=report.xml tests/integration

    [testenv:integration]
    commands =
            python -m pytest -vvv tests/integration

    [coverage]
    xml_report = true
    html_report = true
"""

[tool.pytest.ini_options]
addopts = "--cov-report term --cov-report xml:coverage.xml"

[tool.pylama.linter.pycodestyle]
max_line_length = 120
[tool.pylama.linter.pylint]
max_line_length = 120
[tool.pylama.linter.radon]
no_assert = true

